Fix squished image buttons on mobile cards in the set manager

--- a/static/css/set-manager.css
+++ b/static/css/set-manager.css
@@ -316,7 +316,7 @@
     }
     .card .card-image {
         width: 50%;
-        height: 5vh;
+        height: 2.5em;
     }
     .card .card-image p {
         font-size: 1.5em;
